<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <Button
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"

        android:id="@+id/resumebutton"
        android:background="@drawable/menu_buttons_animator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resume"
        android:textSize="30sp"
        android:onClick="resume_game"/>

    <Button
        android:id="@+id/playbutton"
        android:background="@drawable/menu_buttons_animator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/play"
        android:textSize="30sp"
        android:onClick="pre_game"
        app:layout_constraintTop_toBottomOf="@+id/resumebutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/optionsbutton"
        android:background="@drawable/menu_buttons_animator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:textSize="30sp"
        android:onClick="options"
        app:layout_constraintTop_toBottomOf="@+id/playbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/exitb"
        android:background="@drawable/menu_buttons_animator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="30sp"
        android:onClick="exit"
        app:layout_constraintTop_toBottomOf="@id/optionsbutton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>